--- a/RU_Going/public/assets/css/style.css
+++ b/RU_Going/public/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: black;
+    background-color: white;
     width: 100%;
 }
 
@@ -12,10 +12,10 @@ footer {
     text-align: center;
 }
 
-h1 {
+/*h1 {
     font-family: 'Paytone One', sans-serif;
     cursor: pointer;
-}
+}*/
 
 #backButton {
     background-color: white;
@@ -132,9 +132,7 @@ h1 {
 }
 
 #addEvent {
-    width: 100%;
-    background-color: #ff0000;
-    font-size: 20px;
+ align:center;
 }
 
 #findEvent {
@@ -254,7 +252,7 @@ h1 {
     /*border:1px solid black;*/
 }
 
-.chat-messages {
+/*.chat-messages {
     text-align: left;
     margin: 0 auto;
     margin-bottom: 15px;
@@ -267,13 +265,13 @@ h1 {
     overflow: auto;
     color: black;
 }
-
-#messageInput {
+*/
+/*#messageInput {
     width: 180px;
     height: 28px;
     border: 1px solid black;
     margin-bottom: 10px;
-}
+}*/
 
 .messages {
     margin-top: -10px;
@@ -319,4 +317,65 @@ h1 {
     height:100px ;
     width: auto;
 
+}
+
+
+
+/*overlay test*/
+
+/* The Overlay (background) */
+.overlay {
+    /* Height & width depends on how you want to reveal the overlay (see JS below) */    
+    height: 100%;
+    width: 0;
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    background-color: rgb(0,0,0); /* Black fallback color */
+    background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
+    overflow-x: hidden; /* Disable horizontal scroll */
+    transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+}
+
+/* Position the content inside the overlay */
+.overlay-content {
+    position: relative;
+    top: 25%; /* 25% from the top */
+    width: 100%; /* 100% width */
+    text-align: center; /* Centered text/links */
+    margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
+}
+
+/* The navigation links inside the overlay */
+.overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block; /* Display block instead of inline */
+    transition: 0.3s; /* Transition effects on hover (color) */
+}
+
+/* When you mouse over the navigation links, change their color */
+.overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+}
+
+/* Position the close button (top right corner) */
+.closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px !important; /* Override the font-size specified earlier (36px) for all navigation links */
+}
+
+/* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
+@media screen and (max-height: 450px) {
+    .overlay a {font-size: 20px}
+    .closebtn {
+        font-size: 40px !important;
+        top: 15px;
+        right: 35px;
+    }
 }
